<resources>
    <!-- Leaving this here so it stops auto-generating it... -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- CONFIG -->
    <!-- Configuration strings -->
    <string name="app_name">the licc</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">the licc</string>
    <string name="nav_header_subtitle">liccstaff@thelicc.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_show_button">Show/hide Button</string>
    <string name="action_play_mode">Play Mode</string>
    <string name="action_play_mode_1">Continuous</string>
    <string name="action_play_mode_2">One Shot</string>
    <string name="action_play_mode_3">Hold</string>
    <string name="action_party_mode">Party Mode</string>

    <!-- Settings / Keys -->
    <string name="key_play_mode">play_mode</string>
    <string name="key_show_button">show_button</string>
    <string name="key_party_mode">party_mode</string>

    <!-- Headers -->
    <string name="menu_main">Home</string>
    <string name="menu_tone">Tone Generator</string>
    <string name="menu_comments">Comments</string>
    <string name="menu_about">About</string>

    <!-- CONTENT -->
    <!-- App Text -->
    <string name="events">Upcoming Events</string>
    <string name="creditText">App code and artwork created by Zachary Allard\nTone Generator code modified from\nhttps://github.com/stefanhaustein/android-tone-generator under the Apache 2.0 license</string>
    <string name="contactText">Contact us:</string>
    <string name="socialText">Check us out on social media:</string>
    <string name="instructions">On this page, you can help find inspiration for your music by using our state-of-the-line tone generator!\n\n
    To use it, simply pick a shape, a volume, and a pitch. You can change how your tone is played by using the settings menu in the top right.</string>
    <string name="volumeTextView">Volume</string>
    <string name="pitchTextView">Pitch</string>

    <!-- Buttons -->
    <string name="button_email">email</string>
    <string name="button_map">locate</string>
    <string name="button_phone">call</string>
    <string name="button_web">browse</string>
    <string name="button_twitter">\@twitter</string>
    <string name="button_insta">\@instagram</string>

    <!-- Events -->
    <string name="event_mt_jazz">Microtonal Jazz Sesh</string>
    <string name="event_ms">Modular Synth-stravaganza</string>
    <string name="event_pr">Polyrhythmic Clicking Noises Live</string>
    <string name="event_licc">I play the lick for 5 hours straight</string>
    <string name="event_tritone">Tritones: How to summon a devil</string>
    <string name="event_dissonance">Dissonance vs. Consonance</string>
    <string name="event_mode">I don\'t particularly like modes a lot</string>

    <!-- Users -->
    <string name="user_cl">chickenlover2000</string>
    <string name="user_jl">jazzlover2077</string>
    <string name="user_ls">the_licc_stan</string>
    <string name="user_sr">SeriousReviewer</string>
    <string name="user_an">adam_neely_jr</string>

    <!-- Comments -->
    <string name="comment_ls_rad">The licc isn\'t just cool, it\'s RAD cool!</string>
    <string name="comment_ls_recommend">The licc is the best jazz joint in Nowheresville, Nevada! would recommend.</string>
    <string name="comment_ls_stan">I just want to say how much I love the licc and everything it stands for.</string>
    <string name="comment_cl_chicken">WARNING: This is NOT the chicc! The chicken here is mediocre at best. 0/10.</string>
    <string name="comment_an_licc">da-na naa-na naaaa na naa</string>
    <string name="comment_jl_chicken">i just like the chicken</string>
    <string name="comment_sr_review">To whom it may concern,\nThe following is my formal review for "the licc" establishment located in Nevada. It has come to my attention that
        the preponderousnous the aforementioned esablishment has exceed the maxiumicious limit of the upper echelon when it comes to
        limits regarding the territragic outburst of the dastardly COVID-20 supervirus. Due to the unwitting nature of the supervirus\'s spreadability,
        I mustn\'t regard this business as operating under the egalitarian laws that we not only follow, but adhere to and abide by today.
        Given the circumstances in which we reside and this building operates, I simply CANNOT see that the people support this business or its chicken.\n\n-\tMr. Serious Reviewer</string>

</resources>