<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/action_play_mode"
        android:orderInCategory="1">
        <menu>
            <group
                android:id="@+id/action_play_mode">
                <item
                    android:id="@+id/action_play_mode_1"
                    android:title="@string/action_play_mode_1"
                    android:orderInCategory="1"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_play_mode_2"
                    android:title="@string/action_play_mode_2"
                    android:orderInCategory="1"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_play_mode_3"
                    android:title="@string/action_play_mode_3"
                    android:orderInCategory="1"
                    app:showAsAction="never" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_show_button"
        android:orderInCategory="2"
        android:title="@string/action_show_button"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_party_mode"
        android:orderInCategory="3"
        android:title="@string/action_party_mode"
        app:showAsAction="never" />
</menu>